--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,7 @@ main{
 .passion {
     width: auto;
     padding: 30px 30px 50px 30px;
-    margin-top: 20px;
+    margin-top: 100px;
     display: inline-block;
     /* background-color: rgb(239, 244, 244); */
     background-color: #d9d3d3;
@@ -204,6 +204,7 @@ main{
     background-color: white;
     margin: 5px;
     padding: 7px;
+ 
 }
 
 .passion-title{
@@ -319,6 +320,16 @@ footer{
 }
 
 
+@media (max-width: 1090px) { 
+ 
+    .passion-list{ 
+        width: 90%; 
+        margin-bottom: 25px;
+    }
+
+
+}
+
 @media (max-width: 826px) { 
     .nav-links{
         gap: 0px;
@@ -329,7 +340,12 @@ footer{
          background-size: cover; /* Makes the image cover the entire element */
   
     } 
- 
+
+    .passion-list{ 
+        width: 95%; 
+        margin-bottom: 25px;
+    }
+
 }
 
 
@@ -367,7 +383,7 @@ footer{
 
     .nav-links li {
         padding: 20px;
-        cursor: pointer;
+        cursor: pointer; 
     }
 
     .nav-links li:hover {
@@ -393,6 +409,13 @@ footer{
         height: 200px ; 
     
     }
+
+    .passion-list{ 
+        width: 95%; 
+        margin-bottom: 25px;
+    }
+
+
     .social-icons{ 
         /* background-color: red; */
         width: auto  ; 
