--- a/css/main.css
+++ b/css/main.css
@@ -192,8 +192,7 @@ main{
     width: 80%;
     /* display: inline-block; */
     /* align-items: center; */
-    display: inline-block;
-    /* background-color: red; */
+    display: inline-block; 
 }
 
 .passion-list{
@@ -430,9 +429,12 @@ footer{
         height: 300px; 
     }
 
+    .passion-list-container{
+        width: 100%; 
+    }
     
     .passion-list{ 
-        width: 100%; 
+        width: 90%; 
         margin-bottom: 25px;
     }
 
@@ -467,11 +469,11 @@ footer{
         padding-top: 100px;   
     }
 
-
     
     .passion-list{ 
-        width: 100%; 
-        margin-bottom: 25px;
+        width: 90%; 
+        margin-bottom: 0px  0px 25px 0px;
+        
     }
 
 
