--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,7 @@ main{
 .passion {
     width: auto;
     padding: 30px 30px 50px 30px;
-    margin-top: 100px;
+    margin-top: 20px;
     display: inline-block;
     /* background-color: rgb(239, 244, 244); */
     background-color: #d9d3d3;
@@ -192,7 +192,8 @@ main{
     width: 80%;
     /* display: inline-block; */
     /* align-items: center; */
-    display: inline-block; 
+    display: inline-block;
+    /* background-color: red; */
 }
 
 .passion-list{
@@ -203,7 +204,6 @@ main{
     background-color: white;
     margin: 5px;
     padding: 7px;
- 
 }
 
 .passion-title{
@@ -211,10 +211,6 @@ main{
     padding-bottom: 10px;
 }
 
-.passion-list p {
-    overflow: hidden;
-
-}
 .experience{
     padding: 20px;
     text-align: center;
@@ -253,7 +249,8 @@ main{
 } 
 
 .contact{
-    padding: 50px 0px 0px 50px;
+    justify-content: center;
+    padding: 50px 0px 50px 0px;
     height: 300px;
     background-color:#F0F0F0;
     
@@ -275,24 +272,23 @@ main{
     height: 30px;
 }
 
-footer{
-    /* background-color: #1A1A3C; */
+footer{ 
     background-color: #2B104E;
     padding: 20px;
     margin: 0;
     height: 100px;
     bottom: 0px;
     text-align: center;
+    justify-content: center;
 }
 
 .social-icons{ 
-    width: 119px  ;   
-    /* padding: 10px; */
-    display: inline-block;
+    justify-items: center; 
+    margin-left: -20px;
 }
 .social-icons ul li{
     text-decoration: none;
-    /* list-style-type: none; */
+    list-style-type: none;
     display: inline;
     float: left;
     padding-right: 5px;
@@ -319,16 +315,6 @@ footer{
 }
 
 
-@media (max-width: 1090px) { 
- 
-    .passion-list{ 
-        width: 90%; 
-        margin-bottom: 25px;
-    }
-
-
-}
-
 @media (max-width: 826px) { 
     .nav-links{
         gap: 0px;
@@ -339,12 +325,7 @@ footer{
          background-size: cover; /* Makes the image cover the entire element */
   
     } 
-
-    .passion-list{ 
-        width: 95%; 
-        margin-bottom: 25px;
-    }
-
+ 
 }
 
 
@@ -382,7 +363,7 @@ footer{
 
     .nav-links li {
         padding: 20px;
-        cursor: pointer; 
+        cursor: pointer;
     }
 
     .nav-links li:hover {
@@ -408,36 +389,23 @@ footer{
         height: 200px ; 
     
     }
-
-    .passion-list{ 
-        width: 95%; 
-        margin-bottom: 25px;
-    }
-
-
     .social-icons{ 
         /* background-color: red; */
-        width: auto  ; 
-        padding-left: -20px;  
+        width: auto  ;  
         padding: 0px;
-        display: inline-block;
+        /* display: inline-block; */
+        justify-items: center;
+
     }
+    
+   
+    
 }
 
 @media (max-width:500px) {
     header {
         height: 300px; 
     }
-
-    .passion-list-container{
-        width: 100%; 
-    }
-    
-    .passion-list{ 
-        width: 90%; 
-        margin-bottom: 25px;
-    }
-
 }
 
 @media (max-width:350px) {
@@ -468,13 +436,4 @@ footer{
         padding: 50px; 
         padding-top: 100px;   
     }
-
-    
-    .passion-list{ 
-        width: 90%; 
-        margin-bottom: 0px  0px 25px 0px;
-        
-    }
-
-
 }
